--- a/cctools/ld64/src/ld/passes/Makefile.in
+++ b/cctools/ld64/src/ld/passes/Makefile.in
@@ -92,10 +92,8 @@ host_triplet = @host@
 target_triplet = @target@
 subdir = ld64/src/ld/passes
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
-am__aclocal_m4_deps = $(top_srcdir)/m4/libtool.m4 \
-	$(top_srcdir)/m4/llvm.m4 $(top_srcdir)/m4/ltoptions.m4 \
-	$(top_srcdir)/m4/ltsugar.m4 $(top_srcdir)/m4/ltversion.m4 \
-	$(top_srcdir)/m4/lt~obsolete.m4 $(top_srcdir)/configure.ac
+am__aclocal_m4_deps = $(top_srcdir)/m4/llvm.m4 \
+	$(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 DIST_COMMON = $(srcdir)/Makefile.am $(noinst_HEADERS) \
@@ -112,7 +110,7 @@ am_libPasses_la_OBJECTS = libPasses_la-branch_island.lo \
 	libPasses_la-got.lo libPasses_la-huge.lo libPasses_la-objc.lo \
 	libPasses_la-order.lo libPasses_la-tlvp.lo \
 	stubs/libPasses_la-stubs.lo libPasses_la-bitcode_bundle.lo \
-	libPasses_la-code_dedup.lo
+	libPasses_la-thread_starts.lo libPasses_la-code_dedup.lo
 libPasses_la_OBJECTS = $(am_libPasses_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -371,6 +369,7 @@ libPasses_la_SOURCES = \
 	tlvp.cpp \
 	stubs/stubs.cpp \
 	bitcode_bundle.cpp \
+  thread_starts.cpp \
 	code_dedup.cpp
 
 all: all-am
@@ -386,9 +385,9 @@ $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am  $(am__confi
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu --ignore-deps ld64/src/ld/passes/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign --ignore-deps ld64/src/ld/passes/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu --ignore-deps ld64/src/ld/passes/Makefile
+	  $(AUTOMAKE) --foreign --ignore-deps ld64/src/ld/passes/Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
 	  *config.status*) \
@@ -477,6 +476,9 @@ stubs/libPasses_la-stubs.lo: stubs/stubs.cpp
 
 libPasses_la-bitcode_bundle.lo: bitcode_bundle.cpp
 	$(AM_V_CXX)$(LIBTOOL) $(AM_V_lt) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libPasses_la_CXXFLAGS) $(CXXFLAGS) -c -o libPasses_la-bitcode_bundle.lo `test -f 'bitcode_bundle.cpp' || echo '$(srcdir)/'`bitcode_bundle.cpp
+
+libPasses_la-thread_starts.lo: thread_starts.cpp
+	$(AM_V_CXX)$(LIBTOOL) $(AM_V_lt) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libPasses_la_CXXFLAGS) $(CXXFLAGS) -c -o libPasses_la-thread_starts.lo `test -f 'thread_starts.cpp' || echo '$(srcdir)/'`thread_starts.cpp
 
 libPasses_la-code_dedup.lo: code_dedup.cpp
 	$(AM_V_CXX)$(LIBTOOL) $(AM_V_lt) --tag=CXX $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libPasses_la_CXXFLAGS) $(CXXFLAGS) -c -o libPasses_la-code_dedup.lo `test -f 'code_dedup.cpp' || echo '$(srcdir)/'`code_dedup.cpp
