--- a/cctools/ld64/src/other/Makefile.in
+++ b/cctools/ld64/src/other/Makefile.in
@@ -89,14 +89,12 @@ POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
 target_triplet = @target@
-bin_PROGRAMS = dyldinfo$(EXEEXT) ObjectDump$(EXEEXT) \
-	unwinddump$(EXEEXT) machocheck$(EXEEXT)
+bin_PROGRAMS = dyldinfo$(EXEEXT) unwinddump$(EXEEXT) \
+	machocheck$(EXEEXT)
 subdir = ld64/src/other
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
-am__aclocal_m4_deps = $(top_srcdir)/m4/libtool.m4 \
-	$(top_srcdir)/m4/llvm.m4 $(top_srcdir)/m4/ltoptions.m4 \
-	$(top_srcdir)/m4/ltsugar.m4 $(top_srcdir)/m4/ltversion.m4 \
-	$(top_srcdir)/m4/lt~obsolete.m4 $(top_srcdir)/configure.ac
+am__aclocal_m4_deps = $(top_srcdir)/m4/llvm.m4 \
+	$(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 DIST_COMMON = $(srcdir)/Makefile.am $(am__DIST_COMMON)
@@ -105,21 +103,13 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
-am__dirstamp = $(am__leading_dot)dirstamp
-am_ObjectDump_OBJECTS = ObjectDump.$(OBJEXT) \
-	$(top_builddir)/ld64/src/ld/debugline.$(OBJEXT)
-ObjectDump_OBJECTS = $(am_ObjectDump_OBJECTS)
-am__DEPENDENCIES_1 =
-ObjectDump_DEPENDENCIES =  \
-	$(top_builddir)/ld64/src/ld/parsers/libParsers.la \
-	$(am__DEPENDENCIES_1)
+am_dyldinfo_OBJECTS = dyldinfo.$(OBJEXT)
+dyldinfo_OBJECTS = $(am_dyldinfo_OBJECTS)
+dyldinfo_DEPENDENCIES = $(top_builddir)/ld64/src/3rd/libhelper.la
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
 am__v_lt_0 = --silent
 am__v_lt_1 = 
-am_dyldinfo_OBJECTS = dyldinfo.$(OBJEXT)
-dyldinfo_OBJECTS = $(am_dyldinfo_OBJECTS)
-dyldinfo_DEPENDENCIES = $(top_builddir)/ld64/src/3rd/libhelper.la
 am_machocheck_OBJECTS = machochecker.$(OBJEXT)
 machocheck_OBJECTS = $(am_machocheck_OBJECTS)
 machocheck_DEPENDENCIES = $(top_builddir)/ld64/src/3rd/libhelper.la
@@ -141,24 +131,6 @@ am__v_at_1 =
 DEFAULT_INCLUDES = -I.@am__isrc@
 depcomp =
 am__maybe_remake_depfiles =
-COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
-	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
-LTCOMPILE = $(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) \
-	$(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) \
-	$(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) \
-	$(AM_CFLAGS) $(CFLAGS)
-AM_V_CC = $(am__v_CC_@AM_V@)
-am__v_CC_ = $(am__v_CC_@AM_DEFAULT_V@)
-am__v_CC_0 = @echo "  CC      " $@;
-am__v_CC_1 = 
-CCLD = $(CC)
-LINK = $(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) \
-	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
-	$(AM_LDFLAGS) $(LDFLAGS) -o $@
-AM_V_CCLD = $(am__v_CCLD_@AM_V@)
-am__v_CCLD_ = $(am__v_CCLD_@AM_DEFAULT_V@)
-am__v_CCLD_0 = @echo "  CCLD    " $@;
-am__v_CCLD_1 = 
 CXXCOMPILE = $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
 	$(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
 LTCXXCOMPILE = $(LIBTOOL) $(AM_V_lt) --tag=CXX $(AM_LIBTOOLFLAGS) \
@@ -177,10 +149,10 @@ AM_V_CXXLD = $(am__v_CXXLD_@AM_V@)
 am__v_CXXLD_ = $(am__v_CXXLD_@AM_DEFAULT_V@)
 am__v_CXXLD_0 = @echo "  CXXLD   " $@;
 am__v_CXXLD_1 = 
-SOURCES = $(ObjectDump_SOURCES) $(dyldinfo_SOURCES) \
-	$(machocheck_SOURCES) $(unwinddump_SOURCES)
-DIST_SOURCES = $(ObjectDump_SOURCES) $(dyldinfo_SOURCES) \
-	$(machocheck_SOURCES) $(unwinddump_SOURCES)
+SOURCES = $(dyldinfo_SOURCES) $(machocheck_SOURCES) \
+	$(unwinddump_SOURCES)
+DIST_SOURCES = $(dyldinfo_SOURCES) $(machocheck_SOURCES) \
+	$(unwinddump_SOURCES)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -386,20 +358,12 @@ AM_CFLAGS = \
 unwinddump_SOURCES = unwinddump.cpp
 machocheck_SOURCES = machochecker.cpp
 machocheck_LDADD = $(top_builddir)/ld64/src/3rd/libhelper.la
-ObjectDump_SOURCES = \
-	ObjectDump.cpp \
-	$(top_srcdir)/ld64/src/ld/debugline.c 
-
-ObjectDump_LDADD = \
-	$(top_builddir)/ld64/src/ld/parsers/libParsers.la \
-	$(LTO_LIB)
-
 dyldinfo_SOURCES = dyldinfo.cpp
 dyldinfo_LDADD = $(top_builddir)/ld64/src/3rd/libhelper.la
 all: all-am
 
 .SUFFIXES:
-.SUFFIXES: .c .cpp .lo .o .obj
+.SUFFIXES: .cpp .lo .o .obj
 $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am  $(am__configure_deps)
 	@for dep in $?; do \
 	  case '$(am__configure_deps)' in \
@@ -409,9 +373,9 @@ $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am  $(am__confi
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu --ignore-deps ld64/src/other/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign --ignore-deps ld64/src/other/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu --ignore-deps ld64/src/other/Makefile
+	  $(AUTOMAKE) --foreign --ignore-deps ld64/src/other/Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
 	  *config.status*) \
@@ -478,15 +442,6 @@ clean-binPROGRAMS:
 	list=`for p in $$list; do echo "$$p"; done | sed 's/$(EXEEXT)$$//'`; \
 	echo " rm -f" $$list; \
 	rm -f $$list
-$(top_builddir)/ld64/src/ld/$(am__dirstamp):
-	@$(MKDIR_P) $(top_builddir)/ld64/src/ld
-	@: > $(top_builddir)/ld64/src/ld/$(am__dirstamp)
-$(top_builddir)/ld64/src/ld/debugline.$(OBJEXT):  \
-	$(top_builddir)/ld64/src/ld/$(am__dirstamp)
-
-ObjectDump$(EXEEXT): $(ObjectDump_OBJECTS) $(ObjectDump_DEPENDENCIES) $(EXTRA_ObjectDump_DEPENDENCIES) 
-	@rm -f ObjectDump$(EXEEXT)
-	$(AM_V_CXXLD)$(CXXLINK) $(ObjectDump_OBJECTS) $(ObjectDump_LDADD) $(LIBS)
 
 dyldinfo$(EXEEXT): $(dyldinfo_OBJECTS) $(dyldinfo_DEPENDENCIES) $(EXTRA_dyldinfo_DEPENDENCIES) 
 	@rm -f dyldinfo$(EXEEXT)
@@ -502,19 +457,9 @@ unwinddump$(EXEEXT): $(unwinddump_OBJECTS) $(unwinddump_DEPENDENCIES) $(EXTRA_un
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
-	-rm -f $(top_builddir)/ld64/src/ld/*.$(OBJEXT)
 
 distclean-compile:
 	-rm -f *.tab.c
-
-.c.o:
-	$(AM_V_CC)$(COMPILE) -c -o $@ $<
-
-.c.obj:
-	$(AM_V_CC)$(COMPILE) -c -o $@ `$(CYGPATH_W) '$<'`
-
-.c.lo:
-	$(AM_V_CC)$(LTCOMPILE) -c -o $@ $<
 
 .cpp.o:
 	$(AM_V_CXX)$(CXXCOMPILE) -c -o $@ $<
@@ -649,7 +594,6 @@ clean-generic:
 distclean-generic:
 	-test -z "$(CONFIG_CLEAN_FILES)" || rm -f $(CONFIG_CLEAN_FILES)
 	-test . = "$(srcdir)" || test -z "$(CONFIG_CLEAN_VPATH_FILES)" || rm -f $(CONFIG_CLEAN_VPATH_FILES)
-	-test -z "$(top_builddir)/ld64/src/ld/$(am__dirstamp)" || rm -f $(top_builddir)/ld64/src/ld/$(am__dirstamp)
 
 maintainer-clean-generic:
 	@echo "This command is intended for maintainers to use"
